--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -396,7 +396,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_res, baseline_res = getter(i=1)\n",
+    "idx = 10\n",
+    "tracin_res, baseline_res = getter(i=idx, layers='gradients.shared')\n",
+    "embed_res,_= getter(i=idx, layers='activations.encoder.block.0,activations.decoder.block.0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracin_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process(model_res):\n",
+    "    model_res['text'] = '\\\\textbf{Q:} ' + model_res['inputs_pretokenized'].str.replace('<extra_id_0>', '[MASK]') +  ' \\\\newline\\\\textbf{A:} ' + model_res['targets_pretokenized'].str.replace('<extra_id_0>', '') + ' \\\\textbf{' +  model_res['label'].astype(str) + '}'\n",
+    "    return model_res.head(3)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\\\\\\\ \\n  \\\\midrule \\n\".join(process(tracin_res)['text'] + '&' + process(embed_res)['text'] +  '&' + process(baseline_res)['text'] ) + ' \\\\ \\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "print(\"Model Table\")\n",
+    "display(model_res)\n",
+    "print(\"Baseline Table\")\n",
+    "display(baseline_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_res, baseline_res = getter(i=3, layers='activations.encoder.block.0,activations.decoder.block.0')\n",
     "print(\"Model Table\")\n",
     "display(model_res)\n",
     "print(\"Baseline Table\")\n",
