--- a/stats.ipynb
+++ b/stats.ipynb
@@ -144,25 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.lama_utils import get_sentence\n",
-    "def get_token_match(query, abstract):\n",
-    "    total = 0\n",
-    "    for w in query:\n",
-    "        if w in abstract:\n",
-    "            total += 1\n",
-    "    return total\n",
-    "            \n",
-    "def mrr_of_exact_match(queries, abstracts, abstract_sentences):\n",
-    "    for query in queries:\n",
-    "        query_sentence = set(get_sentence(query).split())\n",
-    "        scores = []\n",
-    "        for abstract_sentence in enumerate(abstract_sentences):\n",
-    "            score = get_token_match(query_sentence, abstract_sentence)\n",
-    "            if score > best_score:\n",
-    "                best_index = index\n",
-    "                best_score = score \n",
-    "                \n",
-    "        best_abstract = abstracts[best_index]"
+    "fact_to_ids = json.load(open(BASE_DIR + \"TREx_lama_templates_v3/abstracts/fact_to_ids_used.json\"))"
    ]
   },
   {
@@ -171,7 +153,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mrr_of_exact_match(queries, abstracts, abstract_sentences)"
+    "ids_to_abstracts = {a[\"id\"]: a for a in abstracts}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abstract_ids = abstracts[\"id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.lama_utils import get_sentence\n",
+    "def get_token_match(query, abstract, filtered_words=None):\n",
+    "    total = 0\n",
+    "    for w in query:\n",
+    "        if filtered_words is not None:\n",
+    "            if w in abstract:\n",
+    "                total += 1\n",
+    "        else:\n",
+    "            if w in filtered_words and w in abstract:\n",
+    "                total += 1\n",
+    "    return total\n",
+    "\n",
+    "from src.metric_utils import reciprocal_rank\n",
+    "def mrr_of_exact_match(queries, abstracts, abstract_sentences, topk=250, filter=False):\n",
+    "    rr = []\n",
+    "    precisions = []\n",
+    "    recalls = []\n",
+    "    for query in queries:\n",
+    "        fact = query['predicate_id'] + ',' + query['obj_uri'] + ',' + query['sub_uri']\n",
+    "        \n",
+    "        if filter:\n",
+    "            filtered_words = []\n",
+    "            filtered_words += query['sub_surface'].split(' ').lower()\n",
+    "            filtered_words += query['obj_surface'].split(' ').lower()\n",
+    "        else:\n",
+    "            filtered_words = None\n",
+    "            \n",
+    "        ids = list(map(str, fact_to_ids[fact]))\n",
+    "        correct_idxs = [abstract_ids.index(id) for id in ids]\n",
+    "        query_sentence = set(get_sentence(query).lower().split())\n",
+    "        scores = []\n",
+    "        best_score = 0.0\n",
+    "        best_index = 0\n",
+    "        for index, abstract_sentence in enumerate(abstract_sentences):\n",
+    "            abstract_sentence = list(map(str.lower, abstract_sentence))\n",
+    "            score = get_token_match(query_sentence, abstract_sentence)\n",
+    "            if score > best_score:\n",
+    "                best_index = index\n",
+    "                best_score = score \n",
+    "            scores.append(score)\n",
+    "        scores = np.array(scores)\n",
+    "        idxs = np.argpartition(scores, -250)[-250 :]\n",
+    "        nn_idxs = idxs[np.argsort(-scores[idxs])]\n",
+    "        nn_scores = scores[nn_idxs].tolist()\n",
+    "        rr.append(reciprocal_rank(nn_idxs, correct_idxs))\n",
+    "    \n",
+    "    return rr\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rrs = mrr_of_exact_match(queries[:100], abstracts, abstract_sentences)\n",
+    "np.mean(rrs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rrs = mrr_of_exact_match(queries[:100], abstracts, abstract_sentences, filter=True)\n",
+    "np.mean(rrs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries[0]"
    ]
   },
   {
@@ -283,15 +359,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fact_to_ids = json.load(open(BASE_DIR + \"TREx_lama_templates_v3/abstracts/fact_to_ids_used.json\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "np.mean([len(v) for k, v in fact_to_ids.items()])"
    ]
   },
@@ -300,9 +367,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ids_to_abstracts = {a[\"id\"]: a for a in abstracts}"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
